# arc-welder

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  main.py  pyproject.toml  requirements.txt
arc_welder/: pipelines.py  utils.py
arc_welder/configs/: graphql_schemas.yaml  instructor_model.yaml  langchain.yaml  openai_models.yaml
tests/: graphql_schemas_mock.yaml  test_utils.py
